k8s/wordpress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wp
  namespace: wordpress
spec:
  selector:
    app: wp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
