k8s/wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp
  namespace: wordpress
spec:
  rules:
    - host: supersite.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  wp
                port:
                  number: 80
